--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ class: title-slide, center, middle, inverse
 
 3. Capital Goods: Goods that last more than 1 year 
 
-4. Consumable Goods: Goods that does not last more than 1 year
+4. Consumable Goods: Goods that does .red[not] last more than 1 year
 ]
 
 .pull-right[
